# Corewar

./: .gitignore  1.cor  1.s.cor  10.cor  11.cor  12.cor  123.cor  12345.cor  123457.cor  14.cor  17.cor  2.cor  20.cor  21.cor  22.cor  26.cor  3.cor  4.cor  42.cor  42.s  42v.2.cor  42v2.cor  45.cor  5.cor  7.cor  CMakeLists.txt  Commands.gsheet  Goals  Makefile  README.md  and.c  asd.cor  author  bigork.sh  ex.cor  f  idea  leaks  lol.cor  lol.s  (+18 more)
Tests/: 42.s  GENESIS.numbers  Validation.numbers  ex_1.s  ex_12.cor  ex_12.s  ex_16.cor  ex_1_NAME_CMD_STRING.cor  ex_1_NAME_CMD_STRING.s  ex_21.cor  ex_21.s  ex_4.cor  ex_4.s
assembler/: Makefile
assembler/includes/: asm.h  op.h
assembler/srcs/: asm.c  binary_or.c  binary_xor.c  correct_cmd.c  errors.c  find_coord.c  free_all_asm.c  generate_file_name.c  inversion_of_decimal.c  transform.c  validator.c  write_command.c  write_command2.c  write_to_struct.c
champion/: Makefile
includes/: op.h
libft/: Makefile  ft_printf.h
libft/includes/: ft_printf.h  libft.h
libft/libc/: ft_atoi.c  ft_bin_to_int.c  ft_itoa_base.c  ft_itoabase.c  ft_numlen.c  get_next_line.c
libft/printf/: ft_fpf_color.c  ft_unicode.c
libft/srcs/: ft_dblhex.c  ft_factorialnb.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoabase.c  ft_nbrlen.c  ft_prfdbl.c  ft_prfnbr.c  ft_prfoper.c  ft_printf.c  ft_putarstr.c  ft_qstr.c  ft_replchar.c  ft_sqrtrd.c  ft_strcat.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_striter.c  ft_striteri.c  ft_strlen.c  ft_strstr.c  ft_tolower.c  ft_toupper.c  ft_unicode.c  get_next_line.c
old_project/assembler/: Makefile
old_project/assembler/includes/: asm.h
old_project/assembler/srcs/: asm.c  validator.c
old_project/champion/includes/: champ.h
old_project/vm/includes/: corewar.h
srcs/: write_to_file.c
tests/error_tests/: test00.s
tests/valid_tests/: test38.s
vm/: Makefile  binary_and.c  binary_or.c  binary_xor.c  test.c
vm/includes/: corewar.h  define.h  function.h  struct.h
vm/libftprintf/: Makefile
vm/libftprintf/libft/: get_next_line.c
vm/libftprintf/libft/includes/: libft.h
vm/source/: cw_end.c  cw_exit.c  cw_free.c  cw_helpers.c  cw_helpers_2.c  cw_init.c  main.c  test.c
vm/source/color_manipulations/: cw_refresh_colors.c  cw_vis_print_map.c  cw_vis_refresh_colors.c  cw_vis_update_map.c
vm/source/conversions/: cw_get_reg_dir_ind.c  cw_helpers.c  cw_helpers_2.c
vm/source/core/: cw_command_filter.c  cw_cycles_new_period.c  cw_display_map.c  cw_game_end.c  cw_game_loop.c  cw_get_codage_tp_av.c  cw_get_command.c  cw_load_map.c  cw_move_pc.c  cw_print_dump.c  cw_process_creation.c  cw_set_arg_tp.c
vm/source/functions/: cw_add.c  cw_aff.c  cw_binary_and.c  cw_binary_or.c  cw_binary_xor.c  cw_fork.c  cw_ld.c  cw_ldi.c  cw_lfork.c  cw_live.c  cw_lld.c  cw_lldi.c  cw_st.c  cw_sti.c  cw_sub.c  cw_zjmp.c
vm/source/list_manipulations/: t_champ.c  t_command.c
vm/source/parser/: cw_get_basic_data.c  cw_get_code_data.c  cw_get_command.c  cw_helpers.c  cw_parse_args.c  cw_parse_flags.c  cw_parser.c
vm/source/struct_manipulations/: t_champ.c  t_champ_add_free_rev.c  t_champ_list_op.c  t_champ_op.c  t_command.c  t_proc_add_cpy.c  t_proc_free.c  t_proc_free_srch.c  t_proc_op.c  t_processes.c
vm/visualizer/: Makefile  README.md
vm/visualizer/includes/: base.h  button.h  draw.h  events.h  fonts.h  init.h  loader.h  ltexture.h  visualizer.h
vm/visualizer/srcs/: clear_renderer.c  create_figures.c  entry_point.c  exit_dialog.c  get_rectangle.c  init.c  init_start_menu.c  set_viewport.c  visualizer.c
vm/visualizer/srcs/button/: create_button.c  create_checkbox.c  handle_button_event.c  handle_checkbox_event.c  handle_movebutton_event.c  render_button_sprite.c  render_checkbox_sprite.c
vm/visualizer/srcs/controls/: create_button.c  create_checkbox.c  handle_button_event.c  handle_checkbox_event.c  handle_movebutton_event.c  render_button_sprite.c  render_checkbox_sprite.c
vm/visualizer/srcs/draw/: draw_arena.c  draw_arena_cell.c  draw_arena_split.c  draw_background.c  draw_button_panel.c  draw_constants.c  draw_controls.c  draw_fillrect.c  draw_framerate.c  draw_infopanel.c  draw_outlinerect.c  draw_statuses.c  draw_winner.c
vm/visualizer/srcs/error/: force_error.c
vm/visualizer/srcs/events/: cycles_change.c  duration_change.c  events_manager.c  exit_event.c  info_call.c  key_event.c  move.c  start_stop.c  wheel_event.c  zoom.c
vm/visualizer/srcs/init/: init.c  init_background.c  init_button_panel.c  init_checkboxes.c  init_controls.c  init_devices.c  init_figures.c  init_infopanel.c  init_move_buttons.c  init_music.c  init_start_buttons.c  init_statuses.c
vm/visualizer/srcs/loader/: load_surface.c  load_texture.c
vm/visualizer/srcs/ltexture/: free_ltexture.c  get_render_position.c  load_from_file.c  load_from_rendered_text.c  render.c  render_part.c  set_alpha_mode.c  set_blend_mode.c  set_color.c
vm/visualizer/srcs/utilities/: change_screen_mode.c  clear_renderer.c  exit_dialog.c  get_digits.c  get_point.c  live_utils.c  reset.c  sdl_putnbr.c  set_render_color.c
vm/vm_champs_42/champs/examples/: bigzork.cor  bigzork.s  zork.cor
vm_champs/: 42.cor  42.s
vm_champs/champs/: Gagnant.cor  Gagnant.s
vm_champs/champs/examples/: zork.cor  zork.s
