cmake_minimum_required(VERSION 3.9)
project(Corewar)

set(CMAKE_CXX_STANDARD 11)

add_executable(Corewar
        includes/op.h
        libft/includes/ft_printf.h
        libft/includes/libft.h
        libft/libc/ft_arr_free.c
        libft/libc/ft_arrlen.c
        libft/libc/ft_arrnew.c
        libft/libc/ft_atoi.c
        libft/libc/ft_atoi_base.c
        libft/libc/ft_atoi_max.c
        libft/libc/ft_bin_to_int.c
        libft/libc/ft_bzero.c
        libft/libc/ft_clear.c
        libft/libc/ft_isalnum.c
        libft/libc/ft_isalpha.c
        libft/libc/ft_isascii.c
        libft/libc/ft_isdigit.c
        libft/libc/ft_islower.c
        libft/libc/ft_isprint.c
        libft/libc/ft_isspace.c
        libft/libc/ft_isupper.c
        libft/libc/ft_itoa.c
        libft/libc/ft_itoa_base.c
        libft/libc/ft_itoa_max.c
        libft/libc/ft_itoabase.c
        libft/libc/ft_joinfree.c
        libft/libc/ft_lstadd.c
        libft/libc/ft_lstdel.c
        libft/libc/ft_lstdelone.c
        libft/libc/ft_lstiter.c
        libft/libc/ft_lstmap.c
        libft/libc/ft_lstnew.c
        libft/libc/ft_memalloc.c
        libft/libc/ft_memccpy.c
        libft/libc/ft_memchr.c
        libft/libc/ft_memcmp.c
        libft/libc/ft_memcpy.c
        libft/libc/ft_memdel.c
        libft/libc/ft_memmove.c
        libft/libc/ft_memrev.c
        libft/libc/ft_memset.c
        libft/libc/ft_nbrlen.c
        libft/libc/ft_numlen.c
        libft/libc/ft_pow.c
        libft/libc/ft_putarr.c
        libft/libc/ft_putarr_fd.c
        libft/libc/ft_putchar.c
        libft/libc/ft_putchar_fd.c
        libft/libc/ft_putendl.c
        libft/libc/ft_putendl_fd.c
        libft/libc/ft_putnbr.c
        libft/libc/ft_putnbr_fd.c
        libft/libc/ft_putstr.c
        libft/libc/ft_putstr_fd.c
        libft/libc/ft_str_free.c
        libft/libc/ft_str_is_alpha.c
        libft/libc/ft_str_is_digit.c
        libft/libc/ft_str_is_lower.c
        libft/libc/ft_str_is_upper.c
        libft/libc/ft_str_to_lower.c
        libft/libc/ft_str_to_upper.c
        libft/libc/ft_strcat.c
        libft/libc/ft_strchr.c
        libft/libc/ft_strclr.c
        libft/libc/ft_strcmp.c
        libft/libc/ft_strcpy.c
        libft/libc/ft_strdel.c
        libft/libc/ft_strdup.c
        libft/libc/ft_strequ.c
        libft/libc/ft_striter.c
        libft/libc/ft_striteri.c
        libft/libc/ft_strjoin.c
        libft/libc/ft_strlcat.c
        libft/libc/ft_strlen.c
        libft/libc/ft_strmap.c
        libft/libc/ft_strmapi.c
        libft/libc/ft_strncat.c
        libft/libc/ft_strncmp.c
        libft/libc/ft_strncpy.c
        libft/libc/ft_strnequ.c
        libft/libc/ft_strnew.c
        libft/libc/ft_strnstr.c
        libft/libc/ft_strrchr.c
        libft/libc/ft_strsplit.c
        libft/libc/ft_strstr.c
        libft/libc/ft_strsub.c
        libft/libc/ft_strtrim.c
        libft/libc/ft_tolower.c
        libft/libc/ft_toupper.c
        libft/libc/get_next_line.c
        libft/printf/ft_charjoin.c
        libft/printf/ft_conv_sig_int.c
        libft/printf/ft_conv_unsig_int.c
        libft/printf/ft_dprintf.c
        libft/printf/ft_fpf_color.c
        libft/printf/ft_get_c.c
        libft/printf/ft_get_di.c
        libft/printf/ft_get_flags.c
        libft/printf/ft_get_oux.c
        libft/printf/ft_get_s.c
        libft/printf/ft_get_type.c
        libft/printf/ft_output_c_modul.c
        libft/printf/ft_output_d_modul.c
        libft/printf/ft_output_ox_modul.c
        libft/printf/ft_output_p_modul.c
        libft/printf/ft_output_s_modul.c
        libft/printf/ft_output_u_modul.c
        libft/printf/ft_pf_strjoin.c
        libft/printf/ft_printf.c
        libft/printf/ft_unicode.c
        vm/includes/corewar.h
        vm/includes/define.h
        vm/includes/function.h
        vm/includes/struct.h
        vm/source/core/cw_display_map.c
        vm/source/core/cw_game_loop.c
        vm/source/core/cw_get_command.c
        vm/source/core/cw_load_map.c
        vm/source/functions/cw_add.c
        vm/source/functions/cw_binary_and.c
        vm/source/functions/cw_binary_or.c
        vm/source/functions/cw_binary_xor.c
        vm/source/functions/cw_ld.c
        vm/source/functions/cw_zjmp.c
        vm/source/functions/cw_lld.c
        vm/source/functions/cw_ldi.c
        vm/source/functions/cw_lldi.c
        vm/source/functions/cw_sti.c
        vm/source/functions/cw_sub.c
        vm/source/functions/cw_live.c
        vm/source/parser/cw_get_basic_data.c
        vm/source/cw_helpers.c
        vm/source/parser/cw_parse_args.c
        vm/source/parser/cw_parse_flags.c
        vm/source/parser/cw_parser.c
        vm/source/struct_manipulations/t_champ.c
        vm/source/struct_manipulations/t_processes.c
        vm/source/cw_exit.c
        vm/source/cw_free.c
        vm/source/cw_init.c
        vm/source/main.c
        )

add_executable(asm
        assembler/includes/asm.h
        assembler/srcs/asm.c
        assembler/srcs/correct_cmd.c
        assembler/srcs/errors.c
        assembler/srcs/find_coord.c
        assembler/srcs/free_all_asm.c
        assembler/srcs/generate_file_name.c
        assembler/srcs/transform.c
        assembler/srcs/validator.c
        assembler/srcs/write_command.c
        assembler/srcs/write_command2.c
        assembler/srcs/write_to_struct.c
        includes/op.h
        libft/includes/ft_printf.h
        libft/includes/libft.h
        libft/libc/ft_arr_free.c
        libft/libc/ft_arrlen.c
        libft/libc/ft_arrnew.c
        libft/libc/ft_atoi.c
        libft/libc/ft_atoi_base.c
        libft/libc/ft_atoi_max.c
        libft/libc/ft_bin_to_int.c
        libft/libc/ft_bzero.c
        libft/libc/ft_clear.c
        libft/libc/ft_isalnum.c
        libft/libc/ft_isalpha.c
        libft/libc/ft_isascii.c
        libft/libc/ft_isdigit.c
        libft/libc/ft_islower.c
        libft/libc/ft_isprint.c
        libft/libc/ft_isspace.c
        libft/libc/ft_isupper.c
        libft/libc/ft_itoa.c
        libft/libc/ft_itoa_base.c
        libft/libc/ft_itoa_max.c
        libft/libc/ft_itoabase.c
        libft/libc/ft_joinfree.c
        libft/libc/ft_lstadd.c
        libft/libc/ft_lstdel.c
        libft/libc/ft_lstdelone.c
        libft/libc/ft_lstiter.c
        libft/libc/ft_lstmap.c
        libft/libc/ft_lstnew.c
        libft/libc/ft_memalloc.c
        libft/libc/ft_memccpy.c
        libft/libc/ft_memchr.c
        libft/libc/ft_memcmp.c
        libft/libc/ft_memcpy.c
        libft/libc/ft_memdel.c
        libft/libc/ft_memmove.c
        libft/libc/ft_memrev.c
        libft/libc/ft_memset.c
        libft/libc/ft_nbrlen.c
        libft/libc/ft_numlen.c
        libft/libc/ft_pow.c
        libft/libc/ft_putarr.c
        libft/libc/ft_putarr_fd.c
        libft/libc/ft_putchar.c
        libft/libc/ft_putchar_fd.c
        libft/libc/ft_putendl.c
        libft/libc/ft_putendl_fd.c
        libft/libc/ft_putnbr.c
        libft/libc/ft_putnbr_fd.c
        libft/libc/ft_putstr.c
        libft/libc/ft_putstr_fd.c
        libft/libc/ft_str_free.c
        libft/libc/ft_str_is_alpha.c
        libft/libc/ft_str_is_digit.c
        libft/libc/ft_str_is_lower.c
        libft/libc/ft_str_is_upper.c
        libft/libc/ft_str_to_lower.c
        libft/libc/ft_str_to_upper.c
        libft/libc/ft_strcat.c
        libft/libc/ft_strchr.c
        libft/libc/ft_strclr.c
        libft/libc/ft_strcmp.c
        libft/libc/ft_strcpy.c
        libft/libc/ft_strdel.c
        libft/libc/ft_strdup.c
        libft/libc/ft_strequ.c
        libft/libc/ft_striter.c
        libft/libc/ft_striteri.c
        libft/libc/ft_strjoin.c
        libft/libc/ft_strlcat.c
        libft/libc/ft_strlen.c
        libft/libc/ft_strmap.c
        libft/libc/ft_strmapi.c
        libft/libc/ft_strncat.c
        libft/libc/ft_strncmp.c
        libft/libc/ft_strncpy.c
        libft/libc/ft_strnequ.c
        libft/libc/ft_strnew.c
        libft/libc/ft_strnstr.c
        libft/libc/ft_strrchr.c
        libft/libc/ft_strsplit.c
        libft/libc/ft_strstr.c
        libft/libc/ft_strsub.c
        libft/libc/ft_strtrim.c
        libft/libc/ft_tolower.c
        libft/libc/ft_toupper.c
        libft/libc/get_next_line.c
        libft/printf/ft_charjoin.c
        libft/printf/ft_conv_sig_int.c
        libft/printf/ft_conv_unsig_int.c
        libft/printf/ft_dprintf.c
        libft/printf/ft_fpf_color.c
        libft/printf/ft_get_c.c
        libft/printf/ft_get_di.c
        libft/printf/ft_get_flags.c
        libft/printf/ft_get_oux.c
        libft/printf/ft_get_s.c
        libft/printf/ft_get_type.c
        libft/printf/ft_output_c_modul.c
        libft/printf/ft_output_d_modul.c
        libft/printf/ft_output_ox_modul.c
        libft/printf/ft_output_p_modul.c
        libft/printf/ft_output_s_modul.c
        libft/printf/ft_output_u_modul.c
        libft/printf/ft_pf_strjoin.c
        libft/printf/ft_printf.c
        libft/printf/ft_unicode.c
        )

include_directories(${CMAKE_HOME_DIRECTORY}/assembler/includes)
include_directories(${CMAKE_HOME_DIRECTORY}/libft/includes)
include_directories(${CMAKE_HOME_DIRECTORY}/includes)
include_directories(${CMAKE_HOME_DIRECTORY}/vm/includes)

target_link_libraries(Corewar ${CMAKE_SOURCE_DIR}/libft/libft.a)
target_link_libraries(asm ${CMAKE_SOURCE_DIR}/libft/libft.a)

#TODO remaster CMAKE and check the makefile;


